// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InitialValuesWizard /> Render InitialValuesWizard: store of wizard 1`] = `
Object {
  "values": Object {
    "firstName": "Timofey",
    "lastName": "Goncharov",
  },
  "wizard": Object {
    "errorsMap": Object {},
    "hasErrors": false,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<InitialValuesWizard /> Render inputs form 1 1`] = `
Array [
  <input
    name="firstName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="First Name"
    type="text"
    value="Timofey"
  />,
  <input
    name="lastName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Last Name"
    type="text"
    value="Goncharov"
  />,
]
`;

exports[`<InitialValuesWizard /> submit on page 1, change step 2, reset step 2 (inputs) 1`] = `
Array [
  <input
    name="phone"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Phone"
    type="text"
    value="+78889996655"
  />,
  <input
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Email"
    type="text"
    value="test@mail.ru"
  />,
]
`;

exports[`<InitialValuesWizard /> submit on page 1, change step 2, reset step 2 (wizard store) 1`] = `
Object {
  "values": Object {
    "email": "test@mail.ru",
    "firstName": "Timofey",
    "lastName": "Goncharov",
    "phone": "+78889996655",
  },
  "wizard": Object {
    "errorsMap": Object {},
    "hasErrors": false,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<InitialValuesWizard /> submit on page 1: store of wizard 1`] = `
Object {
  "values": Object {
    "email": "test@mail.ru",
    "firstName": "Timofey",
    "lastName": "Goncharov",
    "phone": "+78889996655",
  },
  "wizard": Object {
    "errorsMap": Object {},
    "hasErrors": false,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;
